# P2

./: .eslintignore  .eslintrc.json  .gitignore  README.md  front_page.html  generator.py  jest.config.js  package-lock.json  package.json  server.js  weights.json  weights2.json
.github/workflows/: eslint.yml  test.yml
single_computer/: Cargo.toml
single_computer/src/: main.rs
src/: app.js  control.js  index.js  location_creator.js  server.js  serverApp.js
src/public/: app.js  client.js  clientApp.js  gridInterface.html  index.html  provider.js  styles.css  websocket.js
src/public/wasm/: tsp.js  tsp_bg.js  tsp_bg.wasm
tests/: control.test.js
tsp/: Cargo.toml
tsp/pkg/: tsp.js  tsp_bg.js  tsp_bg.wasm
tsp/src/: lib.rs
websocketstuff/: index.js  package-lock.json  package.json
websocketstuff/public/: index.html
