[package]
name = "tsp"
version = "0.1.0"
edition = "2021"
description = "A wasm implementation for TSP"
authors = ["Tinggaard", "Armin", "Thomas", "Mikkel", "Max", "Martin", "Aske"]
licence = "GPL-3.0"
repository = "https://github.com/Tinggaard/P2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
